Fix tab view scroll by wrapping in ion-page

--- a/CODIGO/CAPSTONE/infotex-mobile/src/app/pages/usuario-logueado/usuario-logueado.page.scss
+++ b/CODIGO/CAPSTONE/infotex-mobile/src/app/pages/usuario-logueado/usuario-logueado.page.scss
@@ -1,5 +1,9 @@
 :host {
   display: block;
+  height: 100vh;
+}
+
+ion-page {
   height: 100%;
 }
 
@@ -14,4 +18,5 @@ ion-router-outlet {
   flex: 1;
   height: 100%;
   min-height: 0;
+  overflow-y: auto;
 }
